# main.go
@@ -286,47 +286,5 @@ func main() {
 	// @Security ApiKeyAuth
 	r.Handle("/admin/orders", middleware.JWTMiddleware(middleware.RoleMiddleware("admin")(appHandler.GetAllOrders()))).Methods("GET")
 
-	// @Summary Create a return
-	// @Description Create a return for an order
-	// @Tags Returns
-	// @Accept json
-	// @Produce json
-	// @Security ApiKeyAuth
-	// @Param return body models.Return true "Return"
-	// @Success 201 {object} models.Return
-	// @Router /returns [post]
-	r.Handle("/returns", middleware.JWTMiddleware(appHandler.CreateReturn())).Methods("POST")
-
-	// @Summary Get returns
-	// @Description Get all returns for a user
-	// @Tags Returns
-	// @Accept json
-	// @Produce json
-	// @Security ApiKeyAuth
-	// @Success 200 {array} models.Return
-	// @Router /returns [get]
-	r.Handle("/returns", middleware.JWTMiddleware(appHandler.GetReturns())).Methods("GET")
-
-	// @Summary Create a review
-	// @Description Create a review for a product
-	// @Tags Reviews
-	// @Accept json
-	// @Produce json
-	// @Security ApiKeyAuth
-	// @Param review body models.Review true "Review"
-	// @Success 201 {object} models.Review
-	// @Router /reviews [post]
-	r.Handle("/reviews", middleware.JWTMiddleware(appHandler.CreateReview())).Methods("POST")
-
-	// @Summary Get reviews for a product
-	// @Description Get all reviews for a specific product
-	// @Tags Reviews
-	// @Accept json
-	// @Produce json
-	// @Param product_id path int true "Product ID"
-	// @Success 200 {array} models.Review
-	// @Router /reviews/{product_id} [get]
-	r.Handle("/reviews/{product_id}", appHandler.GetReviews()).Methods("GET")
-
 	log.Fatal(http.ListenAndServe(":8080", r))
 }
