# models/review.go
@@ -1,13 +1,0 @@
-// models/review.go
-package models
-
-import "time"
-
-type Review struct {
-	ID        int       `json:"id"`
-	ProductID int       `json:"product_id"`
-	UserID    int       `json:"user_id"`
-	Rating    int       `json:"rating"` // 1-5
-	Comment   string    `json:"comment"`
-	CreatedAt time.Time `json:"created_at"`
-}
